<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/header_text"
        android:textColor="@color/colorText"
        android:textSize="25sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_view">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="0dp"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingTop="0dp">

                <Button
                    android:id="@+id/spotify_streamer_btn"
                    style="@style/common_btn"
                    android:onClick="callToast"
                    android:text="@string/spotify_streamer" />

                <Button
                    android:id="@+id/scores_app_btn"
                    style="@style/common_btn"
                    android:onClick="callToast"
                    android:text="@string/scores_app" />

                <Button
                    android:id="@+id/library_app_btn"
                    style="@style/common_btn"
                    android:onClick="callToast"
                    android:text="@string/library_app" />

                <Button
                    android:id="@+id/build_it_bigger_btn"
                    style="@style/common_btn"
                    android:onClick="callToast"
                    android:text="@string/build_it_bigger" />

                <Button
                    android:id="@+id/xyz_reader_btn"
                    style="@style/common_btn"
                    android:onClick="callToast"
                    android:text="@string/xyz_reader" />

                <Button
                    android:id="@+id/capstone_btn"
                    style="@style/common_btn"
                    android:background="@color/colorMainButton"
                    android:onClick="callToast"
                    android:text="@string/capstone" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
